# hikaru

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  hikaru.sln  setup.py
hikaru/: class_attribute.cpp  class_attribute.h  class_dict.cpp  class_dict.h  data_define.cpp  data_define.h  data_file.h  data_helper.cpp  data_helper.h  global.h  hikaru.vcxproj  hikaru.vcxproj.filters  hikaru_stdafx.cpp  hikaru_stdafx.h  util.cpp  util.h
hikaru_test/: class_attribute_test.cpp  class_dict_test.cpp  data_helper_test.cpp  hikaru_test.vcxproj  hikaru_test.vcxproj.filters  hikaru_test_stdafx.h  test_main.cpp
old/hikaru/: class_attribute.cpp  class_attribute.h  class_dict.cpp  data_define.h  data_helper.cpp  data_init.cpp  data_init.h  hikaru_stdafx.h
old/hikaru_test/: class_attribute_test.cpp  data_helper_test.cpp  hikaru_test_stdafx.cpp  test_main.cpp
sample/: main.cpp  struct_data.txt
sdk/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
src/: arch.h  assert_include.h  class_attribute.cpp  class_attribute.h  class_dict.cpp  class_dict.h  custom_CCGeometry.cpp  custom_CCGeometry.h  custom_CCPointExtension.cpp  custom_CCPointExtension.h  data_define.cpp  data_define.h  data_file.h  data_helper.cpp  data_helper.h  data_init.cpp  data_init.h  hikaru.h  hk_attribute.h  hk_base_struct.h  hk_class_dict.h  hk_declaration.h  hk_definition.h  hk_globals.h  hk_struct_define.cpp  hk_struct_define.h  shared_object.h  stage_header.h  stage_helper.cpp  stage_helper.h  stage_io_policy_v4.cpp  stage_io_policy_v4.h  stage_read_policy_v02.cpp  stage_read_policy_v02.h  string_hash.cpp  string_hash.h  string_util.cpp  string_util.h  struct_version_convert.cpp  struct_version_converter.h  (+4 more)
test/: class_attribute_test.cpp  class_dict_test.cpp  data_define_test.cpp  data_helper_test.cpp  main.cpp  stage_helper_test.cpp  string_util_test.cpp  struct_file.txt  template_lib_test.cpp  typelist_test.cpp  unit_test.cpp  vector_test.cpp  xml_util.cpp  xml_util.h
testdata/: first.xml  first_result.xml
tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
