CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( hikaru )

SET( HIKARU_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src )
SET( HIKARU_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test )
SET( HIKARU_EXT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext )
SET( HIKARU_EXE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/exe )
SET( TINYXML_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tinyxml )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin" )

#########################################################

# Set Include Path
INCLUDE_DIRECTORIES( ${HIKARU_SRC_DIR} )
INCLUDE_DIRECTORIES( ${TINYXML_SRC_DIR} )

# Add Google Test
ADD_SUBDIRECTORY( ${HIKARU_EXT_DIR}/gtest )
INCLUDE_DIRECTORIES( ${HIKARU_EXT_DIR}/gtest/include )


# File List
FILE( GLOB HIKARU_SRC_FILES "${HIKARU_SRC_DIR}/*.*" )
FILE( GLOB HIKARU_TEST_SRC_FILES "${HIKARU_TEST_DIR}/*.*" )
FILE( GLOB TINYXML_SRC_FILES "${TINYXML_SRC_DIR}/*.*" )

ADD_LIBRARY( hikaru ${HIKARU_SRC_FILES} ${TINYXML_SRC_FILES} )
SOURCE_GROUP( "src" FILES ${HIKARU_SRC_FILES} )
SOURCE_GROUP( "tinyxml" FILES ${TINYXML_SRC_FILES} )

ADD_EXECUTABLE( hikaru_test ${HIKARU_TEST_SRC_FILES} )
TARGET_LINK_LIBRARIES( hikaru_test hikaru gtest )

#ADD_LIBRARY( hikaru_exe ${HIKARU_SRC_FILES} )