CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( hikaru )

SET( HK_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src )
SET( HK_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test )
SET( HK_SAMPLE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sample )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin" )

#########################################################

# Set Include Path
INCLUDE_DIRECTORIES( ${HK_SRC_DIR} )

# Add Google Test
#ADD_SUBDIRECTORY( ${HIKARU_EXT_DIR}/gtest )
#INCLUDE_DIRECTORIES( ${HIKARU_EXT_DIR}/gtest/include )

# File List
FILE( GLOB HK_SRC_FILES "${HK_SRC_DIR}/*.h" "${HK_SRC_DIR}/*.cpp" )
FILE( GLOB HK_TEST_SRC_FILES "${HK_TEST_DIR}/*.h" "${HK_TEST_DIR}/*.cpp" )

ADD_EXECUTABLE( hikaru_test ${HK_TEST_SRC_FILES} ${HK_SRC_FILES} )